[package]
name = "aoede"
version = "0.10.6"
authors = ["Max Isom <hi@maxisom.me>"]
edition = "2021"
description = "A Discord music bot that streams directly from Spotify"
license = "MIT"
keywords = ["discord", "spotify", "music", "bot"]
categories = ["multimedia::audio"]

[dependencies]
librespot = {version = "0.4.2", default-features = false}
songbird = "0.4.5"
symphonia-core = "0.5"
symphonia = { version = "0.5", default-features = false, features = ["pcm"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1.20.1", features = ["default"] }
byteorder = "1.4.3"
serde = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
rubato = "0.12.0"
regex = { version = "1.9.4", features = ["unicode-case"] }

[dependencies.serenity]
version = "0.12.4"
features = ["client", "framework", "gateway", "model", "rustls_backend"]
[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
audiopus_sys = { path = "./patches/audiopus_sys" }


